[chore] 람다식 수정